@startuml

title __PERSONALDATA's Class Diagram__\n

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Database {
        package sud_tanj.com.icare.Backend.Database.PersonalData {
          class DataAnalysis {
              {static} + KEY : String
              - condition : int
              - analysisMessage : String
              + DataAnalysis()
              + DataAnalysis()
              + setCondition()
              + setAnalysisMessage()
              + getCondition()
              + getAnalysisMessage()
          }
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Database {
        package sud_tanj.com.icare.Backend.Database.PersonalData {
          class DataComment {
              {static} + KEY : String
              {static} + COMMENT_BY_DOCTOR : int
              {static} + COMMENT_BY_INDIVIDUAL : int
              - message : String
              - commentType : Integer
              + DataComment()
              + DataComment()
              + setMessage()
              + setCommentType()
              + getMessage()
              + getCommentType()
          }
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Database {
        package sud_tanj.com.icare.Backend.Database.PersonalData {
          class HealthData {
              {static} + KEY : String
              - dataList : List<Double>
              - tag : List<String>
              + HealthData()
              + HealthData()
              + getDataList()
              + getTag()
          }
        }
      }
    }
  }
  

  DataAnalysis -up-|> SyncableObject
  DataComment -up-|> SyncableObject
  HealthData -up-|> SyncableObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
